# calculator

./: Cargo.toml  README.md
src/: controller.rs  main.rs  model.rs
src/controller/: calculator_controller.rs
src/model/: calculator_model.rs
ui/: app-window.slint
