[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is-digit = "0.1.2"
rand = "0.9"
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
